updates on the API controllers and routes
