# routes/order.js
@@ -37,6 +37,42 @@ const {
  *         description: Order created
  */
 
+/**
+ * @swagger
+ * /api/orders/{id}:
+ *   put:
+ *     summary: Update an order by ID
+ *     tags: [Orders]
+ *     parameters:
+ *       - name: id
+ *         in: path
+ *         required: true
+ *         description: ID of the order to update
+ *     responses:
+ *       200:
+ *         description: Order updated
+ *       404:
+ *         description: Order not found
+ */
+
+/**
+ * @swagger
+ * /api/orders/{id}:
+ *   delete:
+ *     summary: Delete an order by ID
+ *     tags: [Orders]
+ *     parameters:
+ *       - name: id
+ *         in: path
+ *         required: true
+ *         description: ID of the order to delete
+ *     responses:
+ *       204:
+ *         description: Order deleted
+ *       404:
+ *         description: Order not found
+ */
+
 router.get('/', getAllOrders);
 router.get('/:id', getOrderById);
 router.post('/', createOrder);
